--- a/requirements.txt
+++ b/requirements.txt
@@ -77,3 +77,19 @@ wheel==0.45.1
 yacs==0.1.8
 yapf==0.43.0
 zipp==3.21.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+async-timeout==5.0.1
+attrs==25.3.0
+frozenlist==1.7.0
+multidict==6.6.4
+propcache==0.3.2
+pyg-lib==0.1.0+pt112cu113
+torch-cluster==1.6.0+pt112cu113
+torch-geometric==2.6.1
+torch-scatter==2.0.9
+torch-sparse==0.6.14
+torch-spline-conv==1.2.1+pt112cu113
+torchvision==0.13.1+cu113
+yarl==1.20.1
